--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -19,14 +19,14 @@ header {
 }
 
 h2{
-  font-size: 22px;
+  font-size: 20px;
   text-align: center;
   margin-top:10px;
   color: white;
 }
 
 li.collection-header h4{
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
 }
 
@@ -55,4 +55,8 @@ div.card-panel.white.black-test{
 i.right{
   margin-right: 20px;
   color: grey;
+}
+
+CollectionItem.active{
+  background-color: #F21982;
 }
